完善FileIOHelper工具类

--- a/MemoryBook/MemoryBook/Info.plist
+++ b/MemoryBook/MemoryBook/Info.plist
@@ -7,7 +7,7 @@
 		<string>weixin</string>
 	</array>
 	<key>CFBundleDisplayName</key>
-	<string>知识集</string>
+	<string>烂笔头</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
